# llm-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/api/: llm_agent.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: counter.rs  mod.rs
src/ui/layout/: mod.rs
