[package]
name = "llm-rs"
version = "0.1.0"
authors = ["WangWindow <1598593280@qq.com>"]
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
rig-core = "0.9.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
